--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "firebase": "^8.0.0",
+    "moment": "^2.29.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "5.2.0",
